--- a/firmware-jenkins.yml
+++ b/firmware-jenkins.yml
@@ -6,7 +6,7 @@
     openwisp2fw_ssl_lib: mbedtls
     openwisp2fw_source_dir: "{{ basedir }}/source"
     openwisp2fw_generator_dir: "{{ basedir }}/generator"
-    openwisp2fw_bin_dir: /home/remote/nnxx-firmware/
+    openwisp2fw_bin_dir: /mnt/nfs-firmware/
     openwisp2fw_source_repo: https://github.com/openwrt/openwrt.git
     openwisp2fw_source_version: openwrt-19.07
     openwisp2fw_source_targets:
